find_package: Fixed CMAKE_FIND_PACKAGE_PREFER_CONFIG Module fallback

Fixes: #19361